tools/flowc/tests/errors/pipe_binding_if.flow
// Test case for pipe binding with if expressions
import runtime;

add(a : int) -> int {
	a + 1;
}

main() {
	// The pipe operator binds to the else branch only
	// User probably intended: (if (true) "one" else "two") |> println
	(if (true) "one" else "two" |> idfn) |> println;
	
	// With integer operations and a pipe that returns same type
	(if (true) 1 else 2 |> add) |> println;
	
	// This is the correct way to write it
	(if (true) "one" else "two") |> println;
	{}
}